--- a/config/Botania.cfg
+++ b/config/Botania.cfg
@@ -113,7 +113,7 @@ general {
     I:shaders.secondaryUnit=7
 
     # Set this to true to enable the Shedding feature from 1.7.10. You'll need to load the game to generate the options. No options are enabled by default. This increases load time.
-    B:shedding.enable=false
+    B:shedding.enable=true
 
     # Do not ever touch this value if not asked to. Possible symptoms of doing so include your head turning backwards, the appearance of Titans near the walls or you being trapped in a game of Sword Art Online.
     I:spreader.posShift=1
@@ -154,270 +154,403 @@ general {
 
 
 shedding {
+    # Configuration of Shedding for Bat
     S:Bat.item=
     I:Bat.lexiconDisplaySize=40
     I:Bat.metadata=0
     I:Bat.rate=-1
+
+    # Configuration of Shedding for Blaze
     S:Blaze.item=
     I:Blaze.lexiconDisplaySize=40
     I:Blaze.metadata=0
     I:Blaze.rate=-1
+
+    # Configuration of Shedding for BloodMagic.CorruptedChicken
     S:BloodMagic.CorruptedChicken.item=
     I:BloodMagic.CorruptedChicken.lexiconDisplaySize=40
     I:BloodMagic.CorruptedChicken.metadata=0
     I:BloodMagic.CorruptedChicken.rate=-1
+
+    # Configuration of Shedding for BloodMagic.CorruptedSheep
     S:BloodMagic.CorruptedSheep.item=
     I:BloodMagic.CorruptedSheep.lexiconDisplaySize=40
     I:BloodMagic.CorruptedSheep.metadata=0
     I:BloodMagic.CorruptedSheep.rate=-1
+
+    # Configuration of Shedding for BloodMagic.CorruptedSpider
     S:BloodMagic.CorruptedSpider.item=
     I:BloodMagic.CorruptedSpider.lexiconDisplaySize=40
     I:BloodMagic.CorruptedSpider.metadata=0
     I:BloodMagic.CorruptedSpider.rate=-1
+
+    # Configuration of Shedding for BloodMagic.CorruptedZombie
     S:BloodMagic.CorruptedZombie.item=
     I:BloodMagic.CorruptedZombie.lexiconDisplaySize=40
     I:BloodMagic.CorruptedZombie.metadata=0
     I:BloodMagic.CorruptedZombie.rate=-1
+
+    # Configuration of Shedding for BloodMagic.Mimic
     S:BloodMagic.Mimic.item=
     I:BloodMagic.Mimic.lexiconDisplaySize=40
     I:BloodMagic.Mimic.metadata=0
     I:BloodMagic.Mimic.rate=-1
+
+    # Configuration of Shedding for BloodMagic.SentientSpecter
     S:BloodMagic.SentientSpecter.item=
     I:BloodMagic.SentientSpecter.lexiconDisplaySize=40
     I:BloodMagic.SentientSpecter.metadata=0
     I:BloodMagic.SentientSpecter.rate=-1
+
+    # Configuration of Shedding for Botania.botania:doppleganger
     S:"Botania.botania:doppleganger.item"=
     I:"Botania.botania:doppleganger.lexiconDisplaySize"=40
     I:"Botania.botania:doppleganger.metadata"=0
     I:"Botania.botania:doppleganger.rate"=-1
+
+    # Configuration of Shedding for Botania.botania:pinkWither
     S:"Botania.botania:pinkWither.item"=
     I:"Botania.botania:pinkWither.lexiconDisplaySize"=40
     I:"Botania.botania:pinkWither.metadata"=0
     I:"Botania.botania:pinkWither.rate"=-1
+
+    # Configuration of Shedding for Botania.botania:pixie
     S:"Botania.botania:pixie.item"=
     I:"Botania.botania:pixie.lexiconDisplaySize"=40
     I:"Botania.botania:pixie.metadata"=0
     I:"Botania.botania:pixie.rate"=-1
+
+    # Configuration of Shedding for CaveSpider
     S:CaveSpider.item=
     I:CaveSpider.lexiconDisplaySize=40
     I:CaveSpider.metadata=0
     I:CaveSpider.rate=-1
+
+    # Configuration of Shedding for Chicken
     S:Chicken.item=
     I:Chicken.lexiconDisplaySize=40
     I:Chicken.metadata=0
     I:Chicken.rate=-1
+
+    # Configuration of Shedding for Cow
     S:Cow.item=
     I:Cow.lexiconDisplaySize=40
     I:Cow.metadata=0
     I:Cow.rate=-1
+
+    # Configuration of Shedding for Creeper
     S:Creeper.item=
     I:Creeper.lexiconDisplaySize=40
     I:Creeper.metadata=0
     I:Creeper.rate=-1
+
+    # Configuration of Shedding for EnderDragon
     S:EnderDragon.item=
     I:EnderDragon.lexiconDisplaySize=40
     I:EnderDragon.metadata=0
     I:EnderDragon.rate=-1
+
+    # Configuration of Shedding for Enderman
     S:Enderman.item=
     I:Enderman.lexiconDisplaySize=40
     I:Enderman.metadata=0
     I:Enderman.rate=-1
+
+    # Configuration of Shedding for Endermite
     S:Endermite.item=
     I:Endermite.lexiconDisplaySize=40
     I:Endermite.metadata=0
     I:Endermite.rate=-1
+
+    # Configuration of Shedding for EntityHorse
     S:EntityHorse.item=
     I:EntityHorse.lexiconDisplaySize=40
     I:EntityHorse.metadata=0
     I:EntityHorse.rate=-1
+
+    # Configuration of Shedding for Ghast
     S:Ghast.item=
     I:Ghast.lexiconDisplaySize=40
     I:Ghast.metadata=0
     I:Ghast.rate=-1
+
+    # Configuration of Shedding for Giant
     S:Giant.item=
     I:Giant.lexiconDisplaySize=40
     I:Giant.metadata=0
     I:Giant.rate=-1
+
+    # Configuration of Shedding for Guardian
     S:Guardian.item=
     I:Guardian.lexiconDisplaySize=40
     I:Guardian.metadata=0
     I:Guardian.rate=-1
+
+    # Configuration of Shedding for LavaSlime
     S:LavaSlime.item=
     I:LavaSlime.lexiconDisplaySize=40
     I:LavaSlime.metadata=0
     I:LavaSlime.rate=-1
+
+    # Configuration of Shedding for Mekanism.BabySkeleton
     S:Mekanism.BabySkeleton.item=
     I:Mekanism.BabySkeleton.lexiconDisplaySize=40
     I:Mekanism.BabySkeleton.metadata=0
     I:Mekanism.BabySkeleton.rate=-1
+
+    # Configuration of Shedding for Mekanism.Robit
     S:Mekanism.Robit.item=
     I:Mekanism.Robit.lexiconDisplaySize=40
     I:Mekanism.Robit.metadata=0
     I:Mekanism.Robit.rate=-1
+
+    # Configuration of Shedding for Mob
     S:Mob.item=
     I:Mob.lexiconDisplaySize=40
     I:Mob.metadata=0
     I:Mob.rate=-1
+
+    # Configuration of Shedding for Monster
     S:Monster.item=
     I:Monster.lexiconDisplaySize=40
     I:Monster.metadata=0
     I:Monster.rate=-1
+
+    # Configuration of Shedding for MushroomCow
     S:MushroomCow.item=
     I:MushroomCow.lexiconDisplaySize=40
     I:MushroomCow.metadata=0
     I:MushroomCow.rate=-1
+
+    # Configuration of Shedding for Ozelot
     S:Ozelot.item=
     I:Ozelot.lexiconDisplaySize=40
     I:Ozelot.metadata=0
     I:Ozelot.rate=-1
+
+    # Configuration of Shedding for Pig
     S:Pig.item=
     I:Pig.lexiconDisplaySize=40
     I:Pig.metadata=0
     I:Pig.rate=-1
+
+    # Configuration of Shedding for PigZombie
     S:PigZombie.item=
     I:PigZombie.lexiconDisplaySize=40
     I:PigZombie.metadata=0
     I:PigZombie.rate=-1
+
+    # Configuration of Shedding for PolarBear
     S:PolarBear.item=
     I:PolarBear.lexiconDisplaySize=40
     I:PolarBear.metadata=0
     I:PolarBear.rate=-1
+
+    # Configuration of Shedding for Quark.ashen
     S:Quark.ashen.item=
     I:Quark.ashen.lexiconDisplaySize=40
     I:Quark.ashen.metadata=0
     I:Quark.ashen.rate=-1
+
+    # Configuration of Shedding for Quark.dweller
     S:Quark.dweller.item=
     I:Quark.dweller.lexiconDisplaySize=40
     I:Quark.dweller.metadata=0
     I:Quark.dweller.rate=-1
+
+    # Configuration of Shedding for Quark.pirate
     S:Quark.pirate.item=
     I:Quark.pirate.lexiconDisplaySize=40
     I:Quark.pirate.metadata=0
     I:Quark.pirate.rate=-1
+
+    # Configuration of Shedding for Quark.wraith
     S:Quark.wraith.item=
     I:Quark.wraith.lexiconDisplaySize=40
     I:Quark.wraith.metadata=0
     I:Quark.wraith.rate=-1
+
+    # Configuration of Shedding for Rabbit
     S:Rabbit.item=
     I:Rabbit.lexiconDisplaySize=40
     I:Rabbit.metadata=0
     I:Rabbit.rate=-1
+
+    # Configuration of Shedding for Sheep
     S:Sheep.item=
     I:Sheep.lexiconDisplaySize=40
     I:Sheep.metadata=0
     I:Sheep.rate=-1
+
+    # Configuration of Shedding for Shulker
     S:Shulker.item=
     I:Shulker.lexiconDisplaySize=40
     I:Shulker.metadata=0
     I:Shulker.rate=-1
+
+    # Configuration of Shedding for Silverfish
     S:Silverfish.item=
     I:Silverfish.lexiconDisplaySize=40
     I:Silverfish.metadata=0
     I:Silverfish.rate=-1
+
+    # Configuration of Shedding for Skeleton
     S:Skeleton.item=
     I:Skeleton.lexiconDisplaySize=40
     I:Skeleton.metadata=0
     I:Skeleton.rate=-1
+
+    # Configuration of Shedding for Slime
     S:Slime.item=
     I:Slime.lexiconDisplaySize=40
     I:Slime.metadata=0
     I:Slime.rate=-1
+
+    # Configuration of Shedding for SnowMan
     S:SnowMan.item=
     I:SnowMan.lexiconDisplaySize=40
     I:SnowMan.metadata=0
     I:SnowMan.rate=-1
+
+    # Configuration of Shedding for Spider
     S:Spider.item=
     I:Spider.lexiconDisplaySize=40
     I:Spider.metadata=0
     I:Spider.rate=-1
+
+    # Configuration of Shedding for Squid
     S:Squid.item=
     I:Squid.lexiconDisplaySize=40
     I:Squid.metadata=0
     I:Squid.rate=-1
+
+    # Configuration of Shedding for Villager
     S:Villager.item=
     I:Villager.lexiconDisplaySize=40
     I:Villager.metadata=0
     I:Villager.rate=-1
+
+    # Configuration of Shedding for VillagerGolem
     S:VillagerGolem.item=
     I:VillagerGolem.lexiconDisplaySize=40
     I:VillagerGolem.metadata=0
     I:VillagerGolem.rate=-1
+
+    # Configuration of Shedding for Witch
     S:Witch.item=
     I:Witch.lexiconDisplaySize=40
     I:Witch.metadata=0
     I:Witch.rate=-1
+
+    # Configuration of Shedding for WitherBoss
     S:WitherBoss.item=
     I:WitherBoss.lexiconDisplaySize=40
     I:WitherBoss.metadata=0
     I:WitherBoss.rate=-1
+
+    # Configuration of Shedding for Wolf
     S:Wolf.item=
     I:Wolf.lexiconDisplaySize=40
     I:Wolf.metadata=0
     I:Wolf.rate=-1
+
+    # Configuration of Shedding for Zombie
     S:Zombie.item=
     I:Zombie.lexiconDisplaySize=40
     I:Zombie.metadata=0
     I:Zombie.rate=-1
+
+    # Configuration of Shedding for armorplus.ender_dragon_zombie
     S:armorplus.ender_dragon_zombie.item=
     I:armorplus.ender_dragon_zombie.lexiconDisplaySize=40
     I:armorplus.ender_dragon_zombie.metadata=0
     I:armorplus.ender_dragon_zombie.rate=-1
+
+    # Configuration of Shedding for draconicevolution.ChaosGuardian
     S:draconicevolution.ChaosGuardian.item=
     I:draconicevolution.ChaosGuardian.lexiconDisplaySize=40
     I:draconicevolution.ChaosGuardian.metadata=0
     I:draconicevolution.ChaosGuardian.rate=-1
+
+    # Configuration of Shedding for forestry.butterflyGE
     S:forestry.butterflyGE.item=
     I:forestry.butterflyGE.lexiconDisplaySize=40
     I:forestry.butterflyGE.metadata=0
     I:forestry.butterflyGE.rate=-1
+
+    # Configuration of Shedding for jurassicraft.brachiosaurus
     S:jurassicraft.brachiosaurus.item=
     I:jurassicraft.brachiosaurus.lexiconDisplaySize=40
     I:jurassicraft.brachiosaurus.metadata=0
     I:jurassicraft.brachiosaurus.rate=-1
+
+    # Configuration of Shedding for jurassicraft.dilophosaurus
     S:jurassicraft.dilophosaurus.item=
     I:jurassicraft.dilophosaurus.lexiconDisplaySize=40
     I:jurassicraft.dilophosaurus.metadata=0
     I:jurassicraft.dilophosaurus.rate=-1
+
+    # Configuration of Shedding for jurassicraft.gallimimus
     S:jurassicraft.gallimimus.item=
     I:jurassicraft.gallimimus.lexiconDisplaySize=40
     I:jurassicraft.gallimimus.metadata=0
     I:jurassicraft.gallimimus.rate=-1
+
+    # Configuration of Shedding for jurassicraft.parasaurolophus
     S:jurassicraft.parasaurolophus.item=
     I:jurassicraft.parasaurolophus.lexiconDisplaySize=40
     I:jurassicraft.parasaurolophus.metadata=0
     I:jurassicraft.parasaurolophus.rate=-1
+
+    # Configuration of Shedding for jurassicraft.triceratops
     S:jurassicraft.triceratops.item=
     I:jurassicraft.triceratops.lexiconDisplaySize=40
     I:jurassicraft.triceratops.metadata=0
     I:jurassicraft.triceratops.rate=-1
+
+    # Configuration of Shedding for jurassicraft.tyrannosaurus
     S:jurassicraft.tyrannosaurus.item=
     I:jurassicraft.tyrannosaurus.lexiconDisplaySize=40
     I:jurassicraft.tyrannosaurus.metadata=0
     I:jurassicraft.tyrannosaurus.rate=-1
+
+    # Configuration of Shedding for jurassicraft.velociraptor
     S:jurassicraft.velociraptor.item=
     I:jurassicraft.velociraptor.lexiconDisplaySize=40
     I:jurassicraft.velociraptor.metadata=0
     I:jurassicraft.velociraptor.rate=-1
+
+    # Configuration of Shedding for natura.babyheatscarspider
     S:natura.babyheatscarspider.item=
     I:natura.babyheatscarspider.lexiconDisplaySize=40
     I:natura.babyheatscarspider.metadata=0
     I:natura.babyheatscarspider.rate=-1
+
+    # Configuration of Shedding for natura.heatscarspider
     S:natura.heatscarspider.item=
     I:natura.heatscarspider.lexiconDisplaySize=40
     I:natura.heatscarspider.metadata=0
     I:natura.heatscarspider.rate=-1
+
+    # Configuration of Shedding for natura.imp
     S:natura.imp.item=
     I:natura.imp.lexiconDisplaySize=40
     I:natura.imp.metadata=0
     I:natura.imp.rate=-1
+
+    # Configuration of Shedding for natura.nitrocreeper
     S:natura.nitrocreeper.item=
     I:natura.nitrocreeper.lexiconDisplaySize=40
     I:natura.nitrocreeper.metadata=0
     I:natura.nitrocreeper.rate=-1
+
+    # Configuration of Shedding for randomthings.spirit
     S:randomthings.spirit.item=
     I:randomthings.spirit.lexiconDisplaySize=40
     I:randomthings.spirit.metadata=0
     I:randomthings.spirit.rate=-1
+
+    # Configuration of Shedding for tconstruct.blueslime
     S:tconstruct.blueslime.item=
     I:tconstruct.blueslime.lexiconDisplaySize=40
     I:tconstruct.blueslime.metadata=0
