--- a/config/aroma1997/Aroma1997sDimension.cfg
+++ b/config/aroma1997/Aroma1997sDimension.cfg
@@ -6,7 +6,11 @@ general {
 
     # The Message that will be sent.
     S:Message=Aroma1997 wishes you good luck on your mining expedition.
+
+    # If sticky ore is enabled, it will be generated in the world and give you slimeballs if broken.
     B:enableStickyOre=true
+
+    # If this is enabled, it will send the text message set under "Message" to every player, when he enters the Mining World. This is useful for infos like "The Mining world will be reset on monday. Get your things out of there." on servers.
     B:enableTextMessageOnDimension=false
 
     # The height of the Mining World
@@ -17,6 +21,9 @@ general {
 "world modifiers" {
     # If true, the Mining World will be completely bright, even in unlit areas.
     B:bright=false
+
+    # If set to true, the top of the world will be grass, otherwise it will be stone. [default: true]
+    B:grassTop=true
 
     # If true, the world time will always be daytime
     B:onlyDay=true
