--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -87,6 +87,7 @@ crafting {
     B:com.progwml6.natura.overworld.block.logs.BlockOverworldLog=true
     B:com.progwml6.natura.overworld.block.logs.BlockOverworldLog2=true
     B:com.progwml6.natura.overworld.block.logs.BlockRedwoodLog=true
+    B:cyano.basemetals.blocks.BlockMetalOre=true
     B:de.ellpeck.actuallyadditions.mod.blocks.BlockMisc=true
     B:elucent.roots.block.BlockBase=true
     B:"forestry.arboriculture.blocks.log.BlockArbLog$1"=true
