--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -87,6 +87,8 @@ crafting {
     B:com.progwml6.natura.overworld.block.logs.BlockOverworldLog=true
     B:com.progwml6.natura.overworld.block.logs.BlockOverworldLog2=true
     B:com.progwml6.natura.overworld.block.logs.BlockRedwoodLog=true
+    B:com.progwml6.natura.overworld.block.planks.BlockOverworldPlanks=true
+    B:cyano.basemetals.blocks.BlockMetalBlock=true
     B:cyano.basemetals.blocks.BlockMetalOre=true
     B:de.ellpeck.actuallyadditions.mod.blocks.BlockMisc=true
     B:elucent.roots.block.BlockBase=true
@@ -115,6 +117,8 @@ crafting {
     B:net.minecraft.block.BlockStone=true
     B:net.minecraft.block.BlockWorkbench=true
     B:org.jurassicraft.server.block.tree.AncientLogBlock=true
+    B:slimeknights.tconstruct.shared.block.BlockSlimeCongealed=true
+    B:slimeknights.tconstruct.world.block.BlockSlimeDirt=true
     B:vazkii.botania.common.block.BlockDreamwood=true
     B:vazkii.botania.common.block.BlockLivingrock=true
     B:vazkii.botania.common.block.decor.BlockManaGlass=true
